<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DrugInfoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/Name"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/DefaultName"
            app:layout_constraintBottom_toTopOf="@id/intakeTimeText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/intakeTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ConsumeTime"
            app:layout_constraintBottom_toTopOf="@+id/timeOffsetText"
            app:layout_constraintStart_toStartOf="@+id/timeOffsetText"
            app:layout_constraintTop_toBottomOf="@+id/Name" />

        <TextView
            android:id="@+id/intakeTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/IntakeTime"
            app:layout_constraintBottom_toTopOf="@+id/timeOffset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/intakeTimeText"
            app:layout_constraintTop_toBottomOf="@+id/Name" />

        <Button
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/Edit"
            app:layout_constraintBottom_toTopOf="@+id/delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timeOffset" />

        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/Delete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit" />

        <TextView
            android:id="@+id/timeOffset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Offset"
            app:layout_constraintBottom_toTopOf="@+id/edit"
            app:layout_constraintStart_toEndOf="@id/timeOffsetText"
            app:layout_constraintStart_toStartOf="@+id/intakeTime"
            app:layout_constraintTop_toBottomOf="@+id/intakeTime"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/timeOffsetText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/TimeOffset"
            app:layout_constraintBottom_toTopOf="@id/edit"
            app:layout_constraintEnd_toEndOf="@+id/intakeTimeText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/intakeTimeText" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>